# TensorPlot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  WandbSweep.sh  main.py  pyproject.toml
notebooks/: template.ipynb
src/: __init__.py  main.py
src/cd_diagram/: __init__.py  cd_diagram.py  sample.py
src/configs/: Config.py  __init__.py  default.yaml  sweep.yaml
src/tensor_plot/: DenseTensor.py  EventTensor.py  Series.py  TensorPlot.py  __init__.py  dense.py  event_tensor.py  tucker.py
src/utils/: Logger.py  TensorPlot.py  grid_search.py
tensor_plot/: Series.py  TuckerTensor.py
tensorplot/: TuckerTensor.py
tool/: PoetryHelper.py
