[project]
name = "tensorplot"
version = "0.1.0"
description = "My Python Template"
authors = [{ name = "kaki005", email = "u097498f@ecs.osaka-u.ac.jp" }]
dependencies = [
    "wandb>=0.17.6",
    "numpy>=2.0.1",
    "matplotlib>=3.9.1.post1",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.5.1",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "dataclasses-json>=0.6.7",
    "pandas>=2.2.2",
    "tensorly>=0.8.1",
    "pre-commit>=3.8.0",
    "opencv-python>=4.10.0.84",
    "opencv-contrib-python>=4.10.0.84",
    "jax>=0.4.35",
]
readme = "README.md"
requires-python = ">= 3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/tensor_plot"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
# 1行の最大文字数
line-length = 120

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
fixable = ["ALL"]
# 除外するエラーの種類
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
    # "F401",  # imported but not used
    "UP008",
    "B007",
    "UP035", #`typing.Dict` is deprecated, use `dict` insteadß
]


[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores] # ファイルごとのエラー除外
"__init__.py" = ["F401"]


[tool.ruff.lint.isort] # isort の設定
known-third-party = []

[tool.ruff.lint.pyupgrade] # Python3.8互換のための設定
keep-runtime-typing = true


[tool.ruff.lint.mccabe]
max-complexity = 5


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
strict = false
disallow_untyped_calls = false
check_untyped_defs = false
allow_redefinition = true
show_error_context = true      # エラー時のメッセージを詳細表示
show_column_numbers = true     # エラー発生箇所の行数/列数を表示
ignore_missing_imports = true  # import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
disallow_untyped_defs = false  # 関数定義の引数/戻り値に型アノテーション必須
no_implicit_optional = true    # デフォルト引数に None を取る場合型アノテーションに Optional 必須
warn_return_any = true         # 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
# ※ `# type: ignore` が付与されている箇所は mypy のエラーを無視出来る
# warn_unused_ignores = true   # mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
warn_redundant_casts = true # 冗長なキャストに警告
